--- a/angular/src/app/modules/replies/components/edit-reply/edit-reply.component.html
+++ b/angular/src/app/modules/replies/components/edit-reply/edit-reply.component.html
@@ -14,7 +14,7 @@
   <button type="submit" mat-raised-button color="primary" [disabled]="form.invalid">
     Submit
   </button>
-  <button mat-raised-button [routerLink]="['/options/replies']">
+  <button type="button" mat-raised-button [routerLink]="['/options/replies']">
     Cancel
   </button>
 </form>
