--- a/angular/src/app/modules/replies/components/reply-list/reply-list.component.html
+++ b/angular/src/app/modules/replies/components/reply-list/reply-list.component.html
@@ -10,6 +10,9 @@
         {{ item.displayName }}
       </mat-panel-title>
       <mat-panel-description>
+        <div class="description">
+          {{ item.content }}
+        </div>
       </mat-panel-description>
     </mat-expansion-panel-header>
 
