--- a/angular/src/app/modules/replies/components/reply-list/reply-list.component.html
+++ b/angular/src/app/modules/replies/components/reply-list/reply-list.component.html
@@ -1,29 +1,29 @@
 <h1>Replies</h1>
 
+<mat-button-toggle-group #group="matButtonToggleGroup" value="tile">
+  <mat-button-toggle value="tile" aria-label="Tile view">
+    <mat-icon>view_module</mat-icon>
+  </mat-button-toggle>
+  <mat-button-toggle value="list" aria-label="List view">
+    <mat-icon>view_list</mat-icon>
+  </mat-button-toggle>
+</mat-button-toggle-group>
+
+<div *ngIf="group.value === 'list'">
+  <app-list-view 
+    [items]="data"
+    (onUpdate)="update($event)"
+    (onDelete)="delete($event)"></app-list-view>
+</div>
+
+<div *ngIf="group.value === 'tile'">
+  <app-tile-view
+    [items]="data"
+    (onUpdate)="update($event)"
+    (onDelete)="delete($event)"></app-tile-view>
+</div>
+
 <p *ngIf="data && data.length === 0">No quick replies yet. Add first!</p>
-
-<mat-accordion cdkDropList (cdkDropListDropped)="drop($event)">
-  <mat-expansion-panel *ngFor="let item of data" cdkDrag>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <mat-icon [inline]="true" cdkDragHandle>drag_indicator</mat-icon>
-        {{ item.displayName }}
-      </mat-panel-title>
-      <mat-panel-description>
-        <div class="description">
-          {{ item.content }}
-        </div>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-
-    <p class="content">{{ item.content }}</p>
-
-    <mat-action-row>
-      <button mat-button color="warn" (click)="delete(item)">Delete</button>
-      <button mat-button color="primary" [routerLink]="['/options/replies/edit', item.id]">Edit</button>
-    </mat-action-row>
-  </mat-expansion-panel>
-</mat-accordion>
 
 <button mat-fab color="primary" [routerLink]="'/options/replies/create'" class="fab_button">
   <mat-icon>add</mat-icon>
