--- a/angular/src/app/modules/options/pages/options/options.component.html
+++ b/angular/src/app/modules/options/pages/options/options.component.html
@@ -10,6 +10,9 @@
       <a mat-list-item [routerLink]="'/options/replies'">
         <mat-icon matListIcon>comment_bank</mat-icon> Replies
       </a>
+      <a mat-list-item [routerLink]="'/options/changelog'">
+        <mat-icon matListIcon>description</mat-icon> Changelog
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
