Update version to 1.0.6

--- a/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
+++ b/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
@@ -12,6 +12,19 @@
       <span class="label label-round label-added text-light">Added</span>
       The changelog page was added
     </li>
+    <li>
+      <span class="label label-round label-added text-light">Added</span>
+      Community links (<a
+        href="https://github.com/FSou1/QuickReply"
+        target="_blank"
+        >GitHub</a
+      >,
+      <a
+        href="https://chrome.google.com/webstore/detail/quickreply/enngmhjfhandgjeccahinpmjfmllklki"
+        target="_blank"
+        >Store</a
+      >) were added to the nav
+    </li>
   </ul>
 </div>
 
