--- a/angular/src/app/modules/options/pages/options/options.component.html
+++ b/angular/src/app/modules/options/pages/options/options.component.html
@@ -1,6 +1,22 @@
 <mat-toolbar color="primary" class="toolbar">
   <mat-toolbar-row class="toolbar-row">
     <span>QuickReply</span>
+    <span class="example-spacer"></span>
+    <a mat-button href="https://github.com/FSou1/QuickReply" target="_blank">
+      <img
+        class="logo-button"
+        src="assets/img/github-circle-white-transparent.svg"
+      />
+      GitHub
+    </a>
+    
+    <a mat-button href="https://chrome.google.com/webstore/detail/quickreply/enngmhjfhandgjeccahinpmjfmllklki" target="_blank">
+      <img
+        class="logo-button"
+        src="assets/img/chrome-web-store.svg"
+      />
+      Store
+    </a>
   </mat-toolbar-row>
 </mat-toolbar>
 
