--- a/angular/src/app/modules/options/pages/options/options.component.scss
+++ b/angular/src/app/modules/options/pages/options/options.component.scss
@@ -30,3 +30,12 @@
 .sidenav-content {
   padding: 80px 20px;
 }
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.logo-button {
+  height: 26px;
+  margin: 0 4px 3px 0;
+}
