Fix a runtime issue with not being able to draw a menu item because of the empty menu item text

--- a/angular/src/app/modules/replies/components/create-reply/create-reply.component.html
+++ b/angular/src/app/modules/replies/components/create-reply/create-reply.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="form" (ngSubmit)="submit()" class="form">
   <mat-form-field hintLabel="Max 25 characters" class="full-width" appearance="outline">
     <mat-label>Display name</mat-label>
-    <input matInput placeholder="Ex. Greetings" formControlName="displayName" maxlength="25" #displayName>
+    <input matInput placeholder="Ex. Greetings" formControlName="displayName" required maxlength="25" #displayName>
   </mat-form-field>
 
   <mat-form-field class="full-width" appearance="outline">
