--- a/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
+++ b/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
@@ -10,7 +10,7 @@
       The can be overridden at the <abbr title="This page is available under the specified URL">chrome://extensions/shortcuts</abbr> page
     </li>
     <li>
-      <span class="label label-round label-fixed text-light">Fixed</span> Display name are now required (to address the requirement of non-empty context menu items, that could cause an issue)
+      <span class="label label-round label-fixed text-light">Fixed</span> Display name value is now required (to address the requirement of non-empty context menu items, that could cause an issue)
     </li>
   </ul>
 </div>
