--- a/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
+++ b/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
@@ -7,7 +7,7 @@
     <li>
       <span class="label label-round label-added text-light">Added</span>
       Ability to paste replies using the hotkeys (<code>Alt + 1, 2, 3</code>) was added.
-      The can be overridden at the <abbr title="This page is available under the specified URL">chrome://extensions/shortcuts</abbr> page
+      The hotkeys can be overridden at the <abbr title="This page is available under the specified URL">chrome://extensions/shortcuts</abbr> page
     </li>
     <li>
       <span class="label label-round label-fixed text-light">Fixed</span> Display name value is now required (to address the requirement of non-empty context menu items, that could cause an issue)
