--- a/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
+++ b/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
@@ -15,6 +15,8 @@
   </ul>
 </div>
 
+<mat-divider></mat-divider>
+
 <h2>v1.0.6</h2>
 <p><small>Released on 7/6/2020</small></p>
 <div class="changes-entry">
