Update the changelog

--- a/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
+++ b/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
@@ -1,5 +1,21 @@
 <h1>Changelog</h1>
 
+<h2>v1.0.8</h2>
+<p><small>Released on 7/23/2020</small></p>
+<div class="changes-entry">
+  <ul>
+    <li>
+      <span class="label label-round label-added text-light">Added</span>
+      A walkthrough that runs on install (for new users) was added
+    </li>
+    <li>
+      <span class="label label-round label-fixed text-light">Fixed</span> Minor fixes
+    </li>
+  </ul>
+</div>
+
+<mat-divider></mat-divider>
+
 <h2>v1.0.7</h2>
 <p><small>Released on 7/11/2020</small></p>
 <div class="changes-entry">
