--- a/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
+++ b/angular/src/app/modules/changelog/components/changelog-list/changelog-list.component.html
@@ -1,5 +1,19 @@
 <h1>Changelog</h1>
 
+<h2>v2.0.0</h2>
+<p><small>Released on 9/8/2025</small></p>
+<div class="changes-entry">
+  <ul>
+    <li>
+      <span class="label label-round label-changed text-light">Changed</span>
+      Migrated the extension from manifest v2 to v3
+    </li>
+    <li>
+      <span class="label label-round label-fixed text-light">Fixed</span> Minor fixes
+    </li>
+  </ul>
+</div>
+
 <h2>v1.0.8</h2>
 <p><small>Released on 7/23/2020</small></p>
 <div class="changes-entry">
